[project]
name = "rpg-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Erick Fonseca",email = "erickrfonseca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
